# cfd

./: CMakeLists.txt  SOD_TASK.unv  last_res.vtk  new_res_20000.vtk  new_res_last.vtk  res_50000.vtk  res_80000.vtk  task.xml
src/: global.cpp  global.h  main.cpp
src/mesh/: Grid.h  Mesh.cpp  Mesh.h
src/mesh_readers/: MeshReader.h  MeshReaderUnv.cpp  MeshReaderUnv.h
src/solvers/: Fvm_tvd_implicit.cpp  Fvm_tvd_implicit.h  Method.h  Solver.cpp  Solver.h
src/solvers/MatrixSolver/: CSR.cpp  CSR.h  MatrixSolver.cpp  MatrixSolver.h  SolverHypre.cpp  SolverHypre.h  SolverHypreBoomerAmg.cpp  SolverHypreBoomerAmg.h  SolverHypreFlexGmres.cpp  SolverHypreFlexGmres.h  SolverHypreGmres.cpp  SolverHypreGmres.h  SolverJacobi.cpp  SolverJacobi.h  SolverZeidel.cpp  SolverZeidel.h
